--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
+    "@mui/lab": "^5.0.0-alpha.149",
+    "@mui/material": "^5.14.14",
     "@mui/system": "^5.14.10",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.16.0",
+    "universal-cookie": "^6.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
