--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2",
     "universal-cookie": "^6.1.1",
     "yup": "^1.3.2"
   },
