--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.14",
     "@mui/system": "^5.14.10",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.17",
     "@types/node": "^20.8.9",
     "axios": "^1.5.1",
     "notistack": "^3.0.1",
