--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.14",
     "@mui/system": "^5.14.10",
+    "@react-oauth/google": "^0.12.1",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.17",
     "@types/node": "^20.8.9",
